BasicFlaskApplication/k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: flask-app
    labels:
        name: flask-app
